--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
                           <li>S.L Arora Reference</li>
                           <li>Important Questions</li>
                           <li>Previous Papers</li>
+                          <div class="d-flex justify-content-center  form-button">
+                            <button type="submit" class="btn btn-primary">Enroll Now</button>  
+                      </div>
                         </div>             
                 </div>
           </div>
@@ -262,6 +265,9 @@
                           <li>S.L Arora Reference</li>
                           <li>Mock Tests</li>
                           <li>Previous Papers</li>
+                          <div class="d-flex justify-content-center  form-button">
+                            <button type="submit" class="btn btn-primary">Enroll Now</button>  
+                      </div>
                         </div>             
                 </div>
           </div>
@@ -519,7 +525,7 @@
        </div>
   </div>
 
-</section> -->
+</section> --!
 <!-- **********************Contact Us ends ******************************************** -->
 
 
