--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Numericals Practise</div>
                                   <div class="card-body">
-                                            <p>Important questions are discussed after completion of each and every topic from previous year papers and from S.L Arora.</p>
+                                            <p>Important questions are discussed after completion of each and every topic from PYQ and from S.L Arora.</p>
                                             <p>After each topic doubt classes are arranged for numerical solving.</p>
                                   </div>             
                                </div>
@@ -164,7 +164,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Competitive Topics</div>
                                   <div class="card-body">
-                                           <p>All topics according to entrance exams are covered and as per JEE/NEET/BHU/AKTU...etc exams.</p>
+                                           <p>All topics  are covered and as per JEE/NEET/BHU/AKTU/COMEDK...etc exams.</p>
                                            <p>Topics having most questions are explained and practiced well.</p>
                                   </div>             
                                </div>
@@ -175,7 +175,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Tricks and Tips</div>
                                   <div class="card-body">
-                                            <p>Important questions are discussed after completion of each and every topic from previous year papers and from S.L Arora.</p>
+                                            <p>Important questions are discussed after completion of each and every topic from PYQ and from S.L Arora.</p>
                                             <p>Tricks are given so that problems can be solved in limited time.</p>
                                   </div>             
                                </div>
