--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
                                   <div class="card-header">Numericals Practise</div>
                                   <div class="card-body">
                                             <p>Important questions are discussed after completion of each and every topic from PYQ and from S.L Arora.</p>
-                                            <p>After each topic doubt classes are arranged for numerical solving.</p>
+                                            <p>Doubt classes are arranged for numerical solving.</p>
                                   </div>             
                                </div>
                          </div>
@@ -175,7 +175,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Tricks and Tips</div>
                                   <div class="card-body">
-                                            <p>Important questions are discussed after completion of each and every topic from PYQ and from S.L Arora.</p>
+                                            <p>Important questions are discussed after completion of each and every topic from previous year questions and S.L Arora.</p>
                                             <p>Tricks are given so that problems can be solved in limited time.</p>
                                   </div>             
                                </div>
