--- a/a.html
+++ b/a.html
@@ -17,6 +17,8 @@
     <title>TechManish</title>
   </head>
   <body>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-bbbd04aa-a2bb-421f-9c4d-da59fd740dcf"></div>
     <div class="header" id='top-header'>
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container text-uppercase p-2">
