--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
     <title>TechEducation</title>
   </head>
   <body>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-bbbd04aa-a2bb-421f-9c4d-da59fd740dcf"></div>
 
     <!--******************************************* Navbar starts************************************* -->
   <header class="header">
