--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                                   <a href=""><i class="fas fa-envelope"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>TechEducation@gmail.com</p>
+                                  <p>TechEdu@gmail.com</p>
                             </div>
                       </div>
 
