--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
         <div class="row">
              <div class="header-section col-lg-6 col-md-6 col-12 d-flex flex-column align-items-center justify-content-center">
                 <div class="center-div p-4">
-                   <h1 class="font-weight-bold">Welcome, Freind!</h1>
+                   <h1 class="font-weight-bold">Welcome, Friends!</h1>
                     
                     <p class="p-3">We are here to help you understand and learn physics very easily.We focus on building concepts using practical daily life examples</p>
                   <div class="header-buttons">
