--- a/index.html
+++ b/index.html
@@ -569,6 +569,9 @@
               </div>
          </div>
     </div>
+  <div class="text">
+      <span>Created By <a href="#">Shraddha Jaiswal</a> | © 2021 All Rights Reserved.</span>
+    </div>
 </footer>
 
 <!-- **********************Footer Section ends***************************************** -->
