--- a/index.html
+++ b/index.html
@@ -564,14 +564,13 @@
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
                            <a href=""><i class="fab fa-youtube"></i></a>
                            <a href="https://wa.link/q0y4v2"><i class="fab fa-whatsapp"></i></a>
+                      <p>Created By <a href="#">Shraddha Jaiswal</a> | © 2021 All Rights Reserved</p>
                         </ul>
                     </div>
               </div>
          </div>
     </div>
-  <div class="text">
-      <span>Created By <a href="#">Shraddha Jaiswal</a> | © 2021 All Rights Reserved.</span>
-    </div>
+ 
 </footer>
 
 <!-- **********************Footer Section ends***************************************** -->
