--- a/about.html
+++ b/about.html
@@ -331,8 +331,8 @@
                     <div class="icons d-flex justify-content-center">
                            <a href=""><i class="fab fa-facebook"></i></a>
                            <a href=""><i class="fab fa-instagram"></i></a>
-                           <a href=""><i class="fab fa-youtube"></i></a>
-                           <a href=""><i class="fab fa-whatsapp"></i></a>
+                           <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
+                           <a href="94538 50113"><i class="fab fa-whatsapp"></i></a>
                         </ul>
                     </div>
               </div>
