--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="extra-div col-lg-4 col-md-4 col-12">
               <a href="#"><img src="images/c4.jpg"></a>
               <h2>Mock Test</h2>
-              <pAfter completion of every topic Mock Tests are scheduled to determine the performance of students.
+              <p>After completion of every topic Mock Tests are scheduled to determine the performance of students.
               </p>
          
        </div>
