--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <header class="header">
     <div class="menu">
            <nav class="navbar navbar-expand-lg navbar-dark">
-              <a class="navbar-brand text-white" href="#">TechEducation</a>
+              <a class="navbar-brand text-white" href="#">Einstein Academy</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -67,9 +67,11 @@
 	 <div class="container">
 	 	 <div class="row">
 	 	 	 <div class="col-lg-5 col-12 about">
-	 	 	 	  <h2>Have Fun With Physics</h2>
-	 	 	 	  <h5>Hi there! I'm Er.Shraddha Jaiswal[B.Tech]</h5>
-	 	 	 	  <p>Our mission is to make students of class 11 & 12  understanding physics concepts by giving practical daily life examples to enhance their learning related to real world.</p>
+	 	 	 	  <h2>Have Fun With Physics and Mathematics.</h2>
+				 <h5>Hi there! I'm <b>ER. MANISH SHUKLA</b> (Ex-Faculty Akash Institute Delhi)</h5>
+				 <br> Best Faculty of Sulanpur.
+				 <br>
+	 	 	 	  <p>Our mission is to make students of class 11 & 12  understanding physics and mathematics concepts by giving practical daily life examples to enhance their learning related to real world.</p>
 	 	 	 	  <a href="contact.html"> Contact</a>
 	 	 	 </div>
 	 	 	 <div class="col-lg-7 col-md-12 col-0 pic d-flex justify-content-center">
@@ -323,7 +325,8 @@
                       <li>Free NCERT solutions</li>
                       <li>Important Questions</li>
                    </ul>
-                   <button type="submit" class="footer-button">Subscribe</button> 
+                   <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><button type="submit" class="footer-button">Subscribe</button>
+                  </a>
               </div>
               <div class="col-lg-6 col-md-12 col-12 ml-auto d-flex flex-column justify-content-center align-items-center">
                     <div class="logo">
