--- a/a.html
+++ b/a.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 
-    <title>TechManish</title>
+    <title>Einstein Academy</title>
   </head>
   <body>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -22,7 +22,7 @@
     <div class="header" id='top-header'>
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container text-uppercase p-2">
-  <a class="navbar-brand" href="#">TechManish</a>
+  <a class="navbar-brand" href="#">Einstein Academy</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon">
