--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <header class="header">
     <div class="menu">
            <nav class="navbar navbar-expand-lg navbar-dark">
-              <a class="navbar-brand text-white" href="#">TechEducation</a>
+              <a class="navbar-brand text-white" href="#">Einstein Academy</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -63,7 +63,7 @@
                                   <a href=""><i class="fas fa-map-marker"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>Opposite Shiv-Hanuman Mandir, Gosainganj, Sultanpur</p>
+                                  <p>Behind Saraswati Vidya Mandir School,ShashtriNagar.</p>
                             </div>
                       </div>
 
@@ -81,7 +81,7 @@
                                   <a href=""><i class="fas fa-phone-alt"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>+91-6388521500</p>
+                                  <p>+91-9453850113</p>
                             </div>
                       </div>
 
@@ -90,7 +90,7 @@
                                 <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
                                 <a href="https://wa.link/q0y4v2"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
-                                <a href=""><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                             </div>
                       </div>
 
@@ -151,11 +151,12 @@
                       <li>Free NCERT solutions</li>
                       <li>Important Questions</li>
                    </ul>
-                   <button type="submit" class="footer-button">Subscribe</button> 
+                   <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><button type="submit" class="footer-button">Subscribe</button>
+                   </a>
               </div>
               <div class="col-lg-6 col-md-12 col-12 ml-auto d-flex flex-column justify-content-center align-items-center">
                     <div class="logo">
-                      <h1>Tech Education</h1></div>
+                      <h1>Einstein Academy</h1></div>
                     <div class="icons">
                            <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
