--- a/about.html
+++ b/about.html
@@ -68,9 +68,8 @@
 	 	 <div class="row">
 	 	 	 <div class="col-lg-5 col-12 about">
 	 	 	 	  <h2>Have Fun With Physics and Mathematics.</h2>
-				 <h5>Hi there! I'm <b>ER. MANISH SHUKLA</b> (Ex-Faculty Akash Institute Delhi)</h5>
-				 <br> Best Faculty of Sulanpur.
-				 <br>
+				 <h5>Hi there! I'm <b>ER. MANISH SHUKLA</b> <br>(Ex-Faculty Akash Institute Delhi)
+				 <br> Best Faculty of Sulanpur.</h5>
 	 	 	 	  <p>Our mission is to make students of class 11 & 12  understanding physics and mathematics concepts by giving practical daily life examples to enhance their learning related to real world.</p>
 	 	 	 	  <a href="contact.html"> Contact</a>
 	 	 	 </div>
@@ -330,7 +329,7 @@
               </div>
               <div class="col-lg-6 col-md-12 col-12 ml-auto d-flex flex-column justify-content-center align-items-center">
                     <div class="logo">
-                      <h1>Tech Education</h1></div>
+                      <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
                            <a href=""><i class="fab fa-facebook"></i></a>
                            <a href=""><i class="fab fa-instagram"></i></a>
