--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 
-    <title>TechEducation</title>
+    <title>Einstein Academy</title>
   </head>
   <body>
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -27,7 +27,7 @@
     <header class="header">
     <div class="menu">
            <nav class="navbar navbar-expand-lg navbar-dark">
-              <a class="navbar-brand text-white" href="#">TechEducation</a>
+              <a class="navbar-brand text-white" href="#">Einstein Academy</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -256,11 +256,12 @@
                       <li>Free NCERT solutions</li>
                       <li>Important Questions</li>
                    </ul>
-                   <button type="submit" class="footer-button">Subscribe</button> 
+                   <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><button type="submit" class="footer-button">Subscribe</button>
+                   </a>
               </div>
               <div class="col-lg-6 col-md-12 col-12 ml-auto d-flex flex-column justify-content-center align-items-center">
                     <div class="logo">
-                      <h1>Tech Education</h1></div>
+                      <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
                            <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
