--- a/enroll.html
+++ b/enroll.html
@@ -114,6 +114,9 @@ table.inner{
 <select name="Birthday_Year" id="Birthday_Year">
  
 <option value="-1">Year:</option>
+<option value="2015">2015</option>
+<option value="2014">2014</option>
+<option value="2013">2013</option>
 <option value="2012">2012</option>
 <option value="2011">2011</option>
 <option value="2010">2010</option>
@@ -213,7 +216,7 @@ Female <input type="radio" name="Gender" value="Female" />
 <td><input type="text" name="Country" value="India" readonly="readonly" /></td>
 </tr>
  
-<!----- Hobbies ---------------------------------------------------------->
+<!----- Hobbies
  
 <tr>
 <td>HOBBIES <br /><br /><br /></td>
@@ -234,7 +237,7 @@ Others
 </td>
 </tr>
  
-<!----- Qualification---------------------------------------------------------->
+ Qualification
 <tr>
 <td>QUALIFICATION <br /><br /><br /><br /><br /><br /><br /></td>
  
@@ -290,7 +293,7 @@ Others
 </table>
  
 </td>
-</tr>
+</tr>---------------------------------------------------------->
  
 <!----- Course ---------------------------------------------------------->
 <tr>
@@ -304,15 +307,22 @@ ClassXI_Board
 <input type="radio" name="ClassXI_Board" value="ClassXI_Board">
 ClassXII_Board
 <input type="radio" name="ClassXII_Board" value="ClassXII_Board">
+IIT-JEE(OTHER COMPETITIONS)
+<input type="radio" name="IIT-JEE" value="IIT-JEE">
+NEET
+    <input type="radio" name="NEET" value="NEET">
 </td>
 </tr>
  
 <!----- Submit and Reset ------------------------------------------------->
 <tr>
 <td colspan="2" align="center">
-<!--<input type="submit" value="Submit">-->
+<!--<input type="submit" value="Submit">
 <div class="header-buttons">
-    <a href="submit.html"> Submit</a>
+    <a href="submit.html"> Submit</a>-->
+    <a href="submit.html"><button type="submit" class="footer-button">Submit</button>
+    </a>
+
     
   
   </div>
