--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
               </div>
               <div class="col-lg-6 col-md-12 col-12 ml-auto d-flex flex-column justify-content-center align-items-center">
                     <div class="logo">
-                      <h1>Tech Education</h1></div>
+                      <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
                            <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
