--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 
-    <title>TechEducation</title>
+    <title>Einstein Academy</title>
   </head>
   <body>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -63,7 +63,7 @@
                                   <a href=""><i class="fas fa-map-marker"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>Behind Saraswati Vidya Mandir School,ShashtriNagar.</p>
+                                  <p>Behind Saraswati Vidya Mandir SchoolShashtriNagar.</p>
                             </div>
                       </div>
 
@@ -72,7 +72,7 @@
                                   <a href=""><i class="fas fa-envelope"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>TechEdu@gmail.com</p>
+                                  <p>EinsteinAcademy@gmail.com</p>
                             </div>
                       </div>
 
