--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 
-    <title>TechEducation</title>
+    <title>Einstein Academy</title>
   </head>
   <body>
 	  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -74,7 +74,7 @@
 	 	 	 	  <a href="contact.html"> Contact</a>
 	 	 	 </div>
 	 	 	 <div class="col-lg-7 col-md-12 col-0 pic d-flex justify-content-center">
-	 	 	 	<img src="images/a1.jpg">
+	 	 	 	<img src="manishsir.jpeg">
 	 	 	 </div>
 	 	 </div>
 	 </div>
