--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
 	 	 	 	<img src="manishsir.jpeg">
 	 	 	 </div>
 	 	 </div>
-		 <div><img src="images/a1.jpg"
-		 </div>
+		 <img src="images/a1.jpg"
+		 
 	 </div>
 </section>
 
@@ -333,7 +333,7 @@
                     <div class="logo">
                       <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
-                           <a href=""><i class="fab fa-facebook"></i></a>
+                           <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
                            <a href=""><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                            <a href="94538 50113"><i class="fab fa-whatsapp"></i></a>
