--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 	 	 	 	<img src="manishsir.jpeg">
 	 	 	 </div>
 	 	 </div>
-		 <img src="images/a1.jpg"
+		 <img src="images/a1.jpg" class="center">
 		 
 	 </div>
 </section>
@@ -186,11 +186,11 @@
         <div class="row b1">
             <div class="col-lg-3 col-md-3 col-12 ">
                 <div class="box">
-                   <a href="#"><img src="images/c3.jpg" class="img-fluidi img-thumbnail"></a>
+                   <a href="#"><img src="star1.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                     Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur.
+                     Sumit Mishra secured good marks in IIT-JEE and took admission in NIT-GUJRAT.
                    </p>
-                   <h1>Student's Name</h1>
+                   <h1>SUMIT MISHRA</h1>
                    <h2>Score</h2>
                 </div>
                   
@@ -198,12 +198,12 @@
 
             <div class="col-lg-3 col-md-3 col-12 ">
                 <div class="box">
-                   <a href="#"><img src="images/c3.jpg" class="img-fluidi img-thumbnail"></a>
+                   <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                     Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur.
+                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
-                   <h1>Student's Name</h1>
-                   <h2>Score</h2>
+                   <h1>Ravi Agrahari</h1>
+                   <h2>AIR 101</h2>
                 </div>
                   
             </div>
