--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 	 	 	 	<img src="manishsir.jpeg">
 	 	 	 </div>
 	 	 </div>
-		 <img src="images/a1.jpg" class="center">
+		
 		 
 	 </div>
 </section>
@@ -248,12 +248,12 @@
 
             <div class="col-lg-3 col-md-3 col-12">
                 <div class="box">
-                   <a href="#"><img src="images/c3.jpg" class="img-fluidi img-thumbnail"></a>
+                   <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                     Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur. 
+                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
-                   <h1>Student's Name</h1>
-                   <h2>Score</h2>
+                   <h1>Ravi Agrahari</h1>
+                   <h2>AIR 101</h2>
                 </div>
                   
             </div>
@@ -274,12 +274,12 @@
 
             <div class="col-lg-3 col-md-3 col-12">
                 <div class="box">
-                   <a href="#"><img src="images/c3.jpg" class="img-fluidi img-thumbnail"></a>
+                    <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                     Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur.
+                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
-                   <h1>Student's Name</h1>
-                   <h2>Score</h2>
+                   <h1>Ravi Agrahari</h1>
+                   <h2>AIR 101</h2>
                 </div>
                   
             </div>
