--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
             </div>
 
             <div class="col-lg-3 col-md-3 col-12 ">
-               <a href="#"><img src="star1.jpeg" class="img-fluidi img-thumbnail"></a>
+               <div class="box">
+                   <a href="#"><img src="star1.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
                      Sumit Mishra secured good rank in IIT-JEE and took admission in NIT GUJRAT.
                    </p>
