--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
                   
             </div>
 
-            <div class="col-lg-3 col-md-3 col-12 ">
-               <div class="box">
-                   <a href="#"><img src="star1.jpeg" class="img-fluidi img-thumbnail"></a>
+           <div class="col-lg-3 col-md-3 col-12 ">
+                <div class="box">
+                   <a href="#"><img src="images/c3.jpg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                     Sumit Mishra secured good rank in IIT-JEE and took admission in NIT GUJRAT.
+                     Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur. 
                    </p>
-                   <h1>Sumit Mishra</h1>
+                   <h1>Student's Name</h1>
                    <h2>Score</h2>
                 </div>
                   
