--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="card text-center">
                         <div class="card-header">Boards Study</div>
                         <div class="card-body">
-                          <li>Rs.<span class="money">1200</span>/student</li>
+                          <li>Rs.<span class="money">1000</span>/student</li>
                           <li>NCERT Course</li>
                           <li>H. C. Verma</li>
                           <li>Important Questions</li>
@@ -263,9 +263,9 @@
 
           <div class="col-lg-5 col-12">
                 <div class="card text-center card-second">
-                        <div class="card-header">Entrance Preparation</div>
+                        <div class="card-header">Competition Preparation</div>
                         <div class="card-body">
-                          <li>Rs.<span class="money">1500</span>/student</li>
+                          <li>Rs.<span class="money">2000</span>/student</li>
                           <li>Tricks and Tips</li>
                           <li>D.C. Pandey</li>
                           <li>Mock Tests</li>
