--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 	 	 	 <div class="col-lg-5 col-12 about">
 	 	 	 	  <h2>Have Fun With Physics and Mathematics.</h2>
 				 <h5>Hi there! I'm <b>ER. MANISH SHUKLA</b> <br>(Ex-Faculty Akash Institute Delhi)
-				 <br> Best Faculty of Sulanpur.</h5>
+				 <br> Best Faculty of Sultanpur.</h5>
 	 	 	 	  <p>Our mission is to make students of class 11 & 12  understanding physics and mathematics concepts by giving practical daily life examples to enhance their learning related to real world.</p>
 	 	 	 	  <a href="contact.html"> Contact</a>
 	 	 	 </div>
