--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
                                   <div class="card-header">NCERT syllabus</div>
                                   <div class="card-body">
                                            <p>All topics according to NCERT are covered and as per CBSE boards exams.</p>
-                                           <p> Some important topics from S.L Arora are also be discussed.
+                                           <p> Some important topics from H.C.Verma are also be discussed.
                                             NCERT questions are discussed. </p>
                                   </div>             
                                </div>
@@ -113,7 +113,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Numericals Practise</div>
                                   <div class="card-body">
-                                            <p>Important questions are discussed after completion of each and every topic from PYQ and from S.L Arora.</p>
+                                            <p>Important questions are discussed after completion of each and every topic from PYQ and from H.C.Verma.</p>
                                             <p>Doubt classes are arranged for numerical solving.</p>
                                   </div>             
                                </div>
@@ -166,7 +166,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Competitive Topics</div>
                                   <div class="card-body">
-                                           <p>All topics  are covered and as per JEE/NEET/BHU/AKTU/COMEDK...etc exams.</p>
+                                           <p>All topics  are covered and as per IIT-JEE/NEET/BHU/AKTU/COMEDK...etc exams.</p>
                                            <p>Topics having most questions are explained and practiced well.</p>
                                   </div>             
                                </div>
@@ -177,7 +177,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Tricks and Tips</div>
                                   <div class="card-body">
-                                            <p>Important questions are discussed after completion of each and every topic from previous year questions and S.L Arora.</p>
+                                            <p>Important questions are discussed after completion of each and every topic from previous year questions and D.C.Pandey.</p>
                                             <p>Tricks are given so that problems can be solved in limited time.</p>
                                   </div>             
                                </div>
@@ -188,7 +188,7 @@
                               <div class="card text-center">
                                   <div class="card-header">Mock Test</div>
                                   <div class="card-body">
-                                            <p>Daily test are organised and questions are asked as per level of JEE/NEET</p>
+                                            <p>Daily test are organised and questions are asked as per level of IIT-JEE/NEET</p>
                                             <p>Previous years questions tricks are discussed and important topic questions are given for practise.</p>
                                   </div>             
                                </div>
@@ -216,7 +216,7 @@
                                 <div class="border col-5" style="height: 4px"></div>
                           </div>
                           <p class="text-center pt-2">Online classes are held through zoom platform six days in a week. </p>
-                          <p class="text-center">Link is provided through whatsapp group - <a href="https://wa.link/q0y4v2">JOIN GROUP</a></p>  
+                          <p class="text-center">Link is provided through whatsapp group - <a href="https://wa.link/ed2w9k">JOIN GROUP</a></p>  
                     <div class="container">
                     <div class="row d-flex justify-content-center c1">
                          <ul class="col-lg-5 col-md-5 col-10">
@@ -266,7 +266,7 @@
                            <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
-                           <a href="https://wa.link/q0y4v2"><i class="fab fa-whatsapp"></i></a>
+                           <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                         </ul>
                     </div>
               </div>
