--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                       <div class="row">
                             <div class=" col-12 d-flex justify-content-center icons">
                                 <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
-                                <a href="https://wa.link/q0y4v2"><i class="fab fa-whatsapp"></i></a>
+                                <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                             </div>
