--- a/submit.html
+++ b/submit.html
@@ -18,7 +18,7 @@ h1{
 <body style="background-color:#bbd3d3;">
 
 <img src="thank you form.jpeg" alt="Thank you" class="center" width="360" height="345" >
-<h1>Welcome to TechEducation!!</h1>
+<h1>Welcome to Einstein Academy!</h1>
 
 </body>
 </html>
