--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 			 			<div class="box" data-aos="flip-left">
   								<img src="images/c3.jpg" alt="">
   								<div class="info">
-    								<p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae minima pariatur consequatur odio veniam nam dolorum enim eum a?<i class="fas fa-quote-right"></i></p>
+    								<p><i class="fas fa-quote-left"></i>Your classes were excellent--where have you been all my life? You are incredibly knowledgeable and articulate.Thank you sir. <i class="fas fa-quote-right"></i></p>
     								<h2>--someone's name</h2>
   								</div>
 						</div>
@@ -118,7 +118,7 @@
 			 			<div class="box" data-aos="flip-right">
   							<img src="images/c3.jpg" alt="">
   							<div class="info">
-    							<p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae minima pariatur consequatur odio veniam nam dolorum enim eum a?<i class="fas fa-quote-right"></i></p>
+    							<p><i class="fas fa-quote-left"></i>This is the first time I have attended a class in this format and wondered how effective it would be. It was very effective and benificial for me.t?<i class="fas fa-quote-right"></i></p>
     							<h2>--someone's name</h2>
   							</div>
 						</div>
@@ -139,7 +139,7 @@
 			 			<div class="box" data-aos="flip-left">
   							<img src="images/c3.jpg" alt="">
   							<div class="info">
-    							<p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae minima pariatur consequatur odio veniam nam dolorum enim eum a?<i class="fas fa-quote-right"></i></p>
+    							<p><i class="fas fa-quote-left"></i>Excellent classes with outstanding teachers, the environment is very neat and clean. Extra classes is also given if the concept isn't clear.<i class="fas fa-quote-right"></i></p>
     							<h2>--someone's name</h2>
   							</div>
 						</div>
