--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
           <div class="col-lg-5 col-12">
                 <div class="card text-center card-second">
-                        <div class="card-header">Competition Preparation</div>
+                        <div class="card-header">Entrance Preparation</div>
                         <div class="card-body">
                           <li>Rs.<span class="money">2000</span>/student</li>
                           <li>Tricks and Tips</li>
