--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <div class="box">
                     <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
+                    Ravi Agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
                    <h1>Ravi Agrahari</h1>
                    <h2>AIR 101</h2>
@@ -419,7 +419,7 @@
                 <div class="box">
                    <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
+                    Ravi Agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
                    <h1>Ravi Agrahari</h1>
                    <h2>AIR 101</h2>
@@ -469,7 +469,7 @@
                 <div class="box">
                    <a href="#"><img src="star2.jpeg" class="img-fluidi img-thumbnail"></a>
                    <p class="m-4">
-                    Ravi agrahari performed well and secured AIR 101 in IES from 2019 batch.
+                    Ravi Agrahari performed well and secured AIR 101 in IES from 2019 batch.
                    </p>
                    <h1>Ravi Agrahari</h1>
                    <h2>AIR 101</h2>
@@ -560,7 +560,7 @@
                     <div class="logo">
                       <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
-                           <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
+                           <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                       <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
