--- a/enroll.html
+++ b/enroll.html
@@ -159,7 +159,7 @@ table.inner{
 <!----- Email Id ---------------------------------------------------------->
 <tr>
 <td>EMAIL ID</td>
-<td><input type="text" name="Email_Id" maxlength="100" /></td>
+<td><input type="email" name="Email_Id" maxlength="100" /></td>
 </tr>
  
 <!----- Mobile Number ---------------------------------------------------------->
