--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
 
                       <div class="row">
                             <div class=" col-12 d-flex justify-content-center icons">
-                                <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
                                 <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
-                                <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/manishkumarshukla63/"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                             </div>
                       </div>
@@ -133,6 +133,9 @@
                   </form>
                   </div>
               </div>
+          <!-- *****************************************************map section starts*********************************************************** -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3578.408658550653!2d82.07191791435055!3d26.248397194691595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a7df2e9a17e1b%3A0x2a1025304d6337b7!2s2286%2C%201374%2F1%2C%20Vivekanand%20Nagar%2C%20Dadupur%2C%20Sultanpur%2C%20Uttar%20Pradesh%20228001!5e0!3m2!1sen!2sin!4v1635042820454!5m2!1sen!2sin" width="780" height="430" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+           <!-- *****************************************************map section ends*********************************************************** -->
         </div>
 </section>
 
@@ -158,8 +161,8 @@
                     <div class="logo">
                       <h1>Einstein Academy</h1></div>
                     <div class="icons">
-                           <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
-                           <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
+                           <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
+                           <a href="https://www.instagram.com/manishkumarshukla63/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                            <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                         </ul>
