--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 
                         <div class="row">
                              <div class="col-lg-2 col-2 service-icons">
-                                  <a href=""><i class="fas fa-map-marker"></i></a>
+                                  <a href="map.html"><i class="fas fa-map-marker"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
                                   <p>Behind Saraswati Vidya Mandir School Shashtri Nagar.</p>
@@ -81,7 +81,7 @@
                                   <a href=""><i class="fas fa-phone-alt"></i></a>
                             </div>
                             <div class="col-lg-10 col-10">
-                                  <p>+91-9453850113</p>
+                                  <p>+91-9453850113,8853605954</p>
                             </div>
                       </div>
 
@@ -134,7 +134,7 @@
                   </div>
               </div>
           <!-- *****************************************************map section starts*********************************************************** -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3578.408658550653!2d82.07191791435055!3d26.248397194691595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a7df2e9a17e1b%3A0x2a1025304d6337b7!2s2286%2C%201374%2F1%2C%20Vivekanand%20Nagar%2C%20Dadupur%2C%20Sultanpur%2C%20Uttar%20Pradesh%20228001!5e0!3m2!1sen!2sin!4v1635042820454!5m2!1sen!2sin" width="780" height="430" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3578.408658550653!2d82.07191791435055!3d26.248397194691595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a7df2e9a17e1b%3A0x2a1025304d6337b7!2s2286%2C%201374%2F1%2C%20Vivekanand%20Nagar%2C%20Dadupur%2C%20Sultanpur%2C%20Uttar%20Pradesh%20228001!5e0!3m2!1sen!2sin!4v1635042820454!5m2!1sen!2sin" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
            <!-- *****************************************************map section ends*********************************************************** -->
         </div>
 </section>
