--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-10 col-10">
                   <h2>Free Resources</h2>
-                  We provide meticulously planned courses and PYQs. We provide video lecture of each topic on YOUTUBE.</p>
+                  <p>We provide meticulously planned courses and PYQs. We provide video lecture of each topic on YOUTUBE.</p>
                 </div>
               </div>
 
@@ -561,7 +561,7 @@
                       <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
                            <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
-                           <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
+                           <a href="https://www.instagram.com/manishkumarshukla63/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                       <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                      
