--- a/enroll.html
+++ b/enroll.html
@@ -50,8 +50,16 @@ table.inner{
 (max 30 characters a-z and A-Z)
 </td>
 </tr>
+    
+ <!----- DATE Of birth ---------------------------------------------------------->
+<tr>
+<td>DATE OF BIRTH</td>
+<td><input type="text" name="Birthday_day" maxlength="30"/>
+(dd/mm/yyyy format)
+</td>
+</tr>
  
-<!----- Date Of Birth -------------------------------------------------------->
+<!----- Date Of Birth 
 <tr>
 <td>DATE OF BIRTH</td>
  
@@ -154,7 +162,7 @@ table.inner{
 <option value="1980">1980</option>
 </select>
 </td>
-</tr>
+</tr>-------------------------------------------------------->
  
 <!----- Email Id ---------------------------------------------------------->
 <tr>
