--- a/enroll.html
+++ b/enroll.html
@@ -221,7 +221,7 @@ Female <input type="radio" name="Gender" value="Female" />
 <!----- Country ---------------------------------------------------------->
 <tr>
 <td>COUNTRY</td>
-<td><input type="text" name="Country" value="India" readonly="readonly" /></td>
+<td><input type="text" name="Country"  maxlength="30" /></td>
 </tr>
  
 <!----- Hobbies
