--- a/enroll.html
+++ b/enroll.html
@@ -191,7 +191,8 @@ Female <input type="radio" name="Gender" value="Female" />
 <!----- Address ---------------------------------------------------------->
 <tr>
 <td>ADDRESS <br /><br /><br /></td>
-<td><textarea name="Address" rows="4" cols="30"></textarea></td>
+<td><input type="text" name="Address" maxlength="120" />
+</td>
 </tr>
  
 <!----- City ---------------------------------------------------------->
