--- a/enroll.html
+++ b/enroll.html
@@ -309,17 +309,17 @@ Others
 <td>COURSES<br />APPLIED FOR</td>
 <td>
     ClassIX_Board
-<input type="radio" name="ClassIX_Board" value="ClassIX_Board">
+<input type="radio" name="Course" value="ClassIX_Board">
 ClassX_Board
-<input type="radio" name="ClassX_Board" value="ClassX_Board">
+<input type="radio" name="Course" value="ClassX_Board">
 ClassXI_Board
-<input type="radio" name="ClassXI_Board" value="ClassXI_Board">
+<input type="radio" name="Course" value="ClassXI_Board">
 ClassXII_Board
-<input type="radio" name="ClassXII_Board" value="ClassXII_Board">
+<input type="radio" name="Course" value="ClassXII_Board">
 IIT-JEE(OTHER COMPETITIONS)
-<input type="radio" name="IIT-JEE" value="IIT-JEE">
+<input type="radio" name="Course" value="IIT-JEE">
 NEET
-    <input type="radio" name="NEET" value="NEET">
+    <input type="radio" name="Course" value="NEET">
 </td>
 </tr>
  
