--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,8 @@
 
                   <div class="col-lg-6 p-4">
                         <h2>Feel free to drop a message</h2>
-                        <form>
+                        <form action="https://formspree.io/f/xoqyzppa"method="POST">
+
 
                         <div class="form-group">
                               <input type="text" class="form-control" id="name" placeholder="Enter your name" required autocomplete="off">
