--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
         <div class="col-lg-6 text-center head">Trial Classes</div>
         <form class="row row-cols-lg-auto g-3 align-items-center">
          <form
-  action="https://formspree.io/f/mleakopv" >
+  action="https://formspree.io/f/mleakopv"
+  method="POST"
+>
           
                 <div class="col-10">
                   <input type="text" name="First name" class="form-control" placeholder="First name" aria-label="First name">
