--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-5 col-12 card-second">
+            <div class="col-lg-4 col-12 card-second">
                 <div class="card text-center">
                         <div class="card-header">Boards Study</div>
                         <div class="card-body">
@@ -261,9 +261,9 @@
                 </div>
           </div>
 
-          <div class="col-lg-5 col-12">
+          <div class="col-lg-4 col-12">
                 <div class="card text-center card-second">
-                        <div class="card-header">Entrance Preparation</div>
+                        <div class="card-header">IIT-JEE Preparation</div>
                         <div class="card-body">
                           <li>Rs.<span class="money">2000</span>/student</li>
                           <li>Tricks and Tips</li>
@@ -280,11 +280,11 @@
                         </div>             
                 </div>
           </div>
-          <div class="col-lg-5 col-12 card-second">
+          <div class="col-lg-4 col-12 card-second">
                 <div class="card text-center">
-                        <div class="card-header">Boards Study</div>
+                        <div class="card-header">NEET</div>
                         <div class="card-body">
-                          <li>Rs.<span class="money">1000</span>/student</li>
+                          <li>Rs.<span class="money">2000</span>/student</li>
                           <li>NCERT Course</li>
                           <li>H. C. Verma</li>
                           <li>Important Questions</li>
@@ -303,8 +303,8 @@
       </div>
     </div>
   </div>
-<--
-  <div class="col-lg-4 card-second">
+
+  <!--<div class="col-lg-4 card-second">
         <div class="col-lg-6 text-center head">Trial Classes</div>
         <form class="row row-cols-lg-auto g-3 align-items-center">
          <form
