--- a/index.html
+++ b/index.html
@@ -588,6 +588,11 @@
                      
                         </ul>
                     </div>
+           </div><hr>
+                    <p class="copyright">Made with &#128151; by Shraddha Jaiswal &#169;</p>
+
+
+                </div>
               </div>
          </div>
     </div>
